--- a/app/src/main/res/layout/activity_rental_car_delivery_map.xml
+++ b/app/src/main/res/layout/activity_rental_car_delivery_map.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="134dp">
 
+        <!-- TODO kakao map layout -->
         <!-- 현재 주소 layout -->
 
         <RelativeLayout
@@ -23,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent">
         </RelativeLayout>
 
+        <!-- TODO 액티비티 종료 버튼 -->
         <ImageView
             android:id="@+id/car_del_curAdd"
             android:layout_width="52dp"
@@ -34,6 +36,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- TODO 현재위치 호출 버튼 -->
         <ImageView
             android:id="@+id/car_del_ivPin"
             android:layout_width="wrap_content"
@@ -77,6 +80,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- TODO 현재위치 정보 텍스트뷰 -->
         <TextView
             android:id="@+id/tvCar_del_address"
             android:layout_width="wrap_content"
@@ -102,6 +106,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
+        <!-- TODO 최종 적용 버튼 -->
         <Button
             android:id="@+id/btn_car_del_accept"
             android:fontFamily="@font/nanumsquarebold"
