--- a/app/src/main/res/layout/activity_rental_list.xml
+++ b/app/src/main/res/layout/activity_rental_list.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/filled_red" />
 
+    <!-- TODO 리스트 Sort 설정 Dialog 호출 버튼-->
     <Button
         android:id="@+id/btn_rentalCar_Sort"
         android:layout_width="74dp"
@@ -40,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <!-- TODO 리스트 필터 액티비티 호출 버튼 -->
     <Button
         android:id="@+id/btFilter"
         android:layout_width="66dp"
@@ -61,6 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TODO 스크롤뷰에 리스트 적용 -->
     <ScrollView
         android:id="@+id/scr_rent_List"
         android:layout_width="match_parent"
@@ -73,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con1"
                 android:layout_width="0dp"
@@ -83,6 +86,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv1"
                     android:layout_width="151dp"
@@ -93,6 +97,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView1_1"
                     android:layout_width="wrap_content"
@@ -105,6 +110,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv1" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView1_2"
                     android:layout_width="149dp"
@@ -119,7 +125,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView1_1" />
 
-
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView1_4"
                     android:layout_width="wrap_content"
@@ -136,6 +142,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con2"
                 android:layout_width="0dp"
@@ -146,6 +153,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv2"
                     android:layout_width="151dp"
@@ -156,6 +164,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView2_1"
                     android:layout_width="wrap_content"
@@ -168,6 +177,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv2" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView2_2"
                     android:layout_width="149dp"
@@ -182,6 +192,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView2_3"
                     android:layout_width="wrap_content"
@@ -195,6 +206,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView2_4"
                     android:layout_width="wrap_content"
@@ -210,6 +222,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView2_2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con3"
                 android:layout_width="0dp"
@@ -220,6 +233,7 @@
                 app:layout_constraintTop_toBottomOf="@id/rent_list_con1"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv3"
                     android:layout_width="151dp"
@@ -230,6 +244,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView3_1"
                     android:layout_width="wrap_content"
@@ -242,6 +257,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv3" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView3_2"
                     android:layout_width="149dp"
@@ -256,6 +272,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView3_3"
                     android:layout_width="wrap_content"
@@ -269,6 +286,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView3_4"
                     android:layout_width="wrap_content"
@@ -285,6 +303,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con4"
                 android:layout_width="0dp"
@@ -295,6 +314,7 @@
                 app:layout_constraintTop_toBottomOf="@id/rent_list_con2"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv4"
                     android:layout_width="151dp"
@@ -305,6 +325,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView4_1"
                     android:layout_width="wrap_content"
@@ -317,6 +338,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv4" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView4_2"
                     android:layout_width="149dp"
@@ -331,6 +353,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView4_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView4_3"
                     android:layout_width="wrap_content"
@@ -344,6 +367,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView4_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView4_4"
                     android:layout_width="wrap_content"
@@ -359,6 +383,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView4_2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con5"
                 android:layout_width="0dp"
@@ -369,6 +394,7 @@
                 app:layout_constraintTop_toBottomOf="@id/rent_list_con3"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv5"
                     android:layout_width="151dp"
@@ -379,6 +405,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView5_1"
                     android:layout_width="wrap_content"
@@ -391,6 +418,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv5" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView5_2"
                     android:layout_width="149dp"
@@ -405,6 +433,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView5_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView5_3"
                     android:layout_width="wrap_content"
@@ -418,6 +447,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView5_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView5_4"
                     android:layout_width="wrap_content"
@@ -434,6 +464,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con6"
                 android:layout_width="0dp"
@@ -444,6 +475,7 @@
                 app:layout_constraintTop_toBottomOf="@id/rent_list_con4"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv6"
                     android:layout_width="151dp"
@@ -454,6 +486,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView6_1"
                     android:layout_width="wrap_content"
@@ -466,6 +499,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv6" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView6_2"
                     android:layout_width="149dp"
@@ -480,6 +514,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView6_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView6_3"
                     android:layout_width="wrap_content"
@@ -493,6 +528,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView6_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView6_4"
                     android:layout_width="wrap_content"
@@ -508,6 +544,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView6_2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con7"
                 android:layout_width="0dp"
@@ -519,6 +556,7 @@
 
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv7"
                     android:layout_width="151dp"
@@ -529,6 +567,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView7_1"
                     android:layout_width="wrap_content"
@@ -541,6 +580,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv7" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView7_2"
                     android:layout_width="149dp"
@@ -555,6 +595,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView7_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView7_3"
                     android:layout_width="wrap_content"
@@ -568,6 +609,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView7_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView7_4"
                     android:layout_width="wrap_content"
@@ -584,6 +626,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- TODO Rental Car Item Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rent_list_con8"
                 android:layout_width="0dp"
@@ -594,6 +637,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_weight="1">
 
+                <!-- 렌탈카 이미지 -->
                 <ImageView
                     android:id="@+id/rent_list_iv8"
                     android:layout_width="151dp"
@@ -604,6 +648,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <!-- 지점 정보-->
                 <TextView
                     android:id="@+id/textView8_1"
                     android:layout_width="wrap_content"
@@ -616,6 +661,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rent_list_iv8" />
 
+                <!-- 품목명 -->
                 <TextView
                     android:id="@+id/textView8_2"
                     android:layout_width="149dp"
@@ -630,6 +676,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView8_1" />
 
+                <!--할인율 -->
                 <TextView
                     android:id="@+id/textView8_3"
                     android:layout_width="wrap_content"
@@ -643,6 +690,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView8_2" />
 
+                <!-- 가격 -->
                 <TextView
                     android:id="@+id/textView8_4"
                     android:layout_width="wrap_content"
