--- a/app/src/main/res/layout/activity_rental_list_filter_brand.xml
+++ b/app/src/main/res/layout/activity_rental_list_filter_brand.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/filled_red" />
 
+    <!-- TODO 초기화 버튼 -->
     <Button
         android:id="@+id/btnBrandClear"
         android:layout_width="65dp"
@@ -45,7 +46,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <!-- TODO 국내 아이템1 -->
     <CheckBox
         android:id="@+id/rb1_1"
         android:layout_width="wrap_content"
@@ -58,7 +59,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <!-- TODO 국내 아이템2 -->
     <CheckBox
         android:id="@+id/rb1_2"
         android:layout_width="wrap_content"
@@ -71,6 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TODO 국내 아이템3 -->
     <CheckBox
         android:id="@+id/rb1_3"
         android:layout_width="wrap_content"
@@ -83,6 +85,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb1_1" />
 
+    <!-- TODO 국내 아이템4 -->
     <CheckBox
         android:id="@+id/rb1_4"
         android:layout_width="wrap_content"
@@ -95,6 +98,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb1_2" />
 
+    <!-- TODO 국내 아이템5 -->
     <CheckBox
         android:id="@+id/rb1_5"
         android:layout_width="wrap_content"
@@ -107,6 +111,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb1_3" />
 
+    <!-- TODO 국내 아이템6 -->
     <CheckBox
         android:id="@+id/rb1_6"
         android:layout_width="wrap_content"
@@ -134,6 +139,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TODO 국외 아이템1 -->
     <CheckBox
         android:id="@+id/rb2_1"
         android:layout_width="wrap_content"
@@ -146,6 +152,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
+    <!-- TODO 국외 아이템2 -->
     <CheckBox
         android:id="@+id/rb2_2"
         android:layout_width="wrap_content"
@@ -158,6 +165,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
+    <!-- TODO 국외 아이템3 -->
     <CheckBox
         android:id="@+id/rb2_3"
         android:layout_width="wrap_content"
@@ -170,6 +178,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_1" />
 
+    <!-- TODO 국외 아이템4 -->
     <CheckBox
         android:id="@+id/rb2_4"
         android:layout_width="wrap_content"
@@ -182,6 +191,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_2" />
 
+    <!-- TODO 국외 아이템5 -->
     <CheckBox
         android:id="@+id/rb2_5"
         android:layout_width="wrap_content"
@@ -194,6 +204,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_3" />
 
+    <!-- TODO 국외 아이템6 -->
     <CheckBox
         android:id="@+id/rb2_6"
         android:layout_width="wrap_content"
@@ -206,6 +217,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_4" />
 
+    <!-- TODO 국외 아이템7 -->
     <CheckBox
         android:id="@+id/rb2_7"
         android:layout_width="wrap_content"
@@ -218,6 +230,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_5" />
 
+    <!-- TODO 국외 아이템8 -->
     <CheckBox
         android:id="@+id/rb2_8"
         android:layout_width="wrap_content"
@@ -230,6 +243,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_6" />
 
+    <!-- TODO 국외 아이템9 -->
     <CheckBox
         android:id="@+id/rb2_9"
         android:layout_width="wrap_content"
@@ -242,6 +256,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_7" />
 
+    <!-- TODO 국외 아이템10 -->
     <CheckBox
         android:id="@+id/rb2_10"
         android:layout_width="wrap_content"
@@ -254,6 +269,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rb2_8" />
 
+    <!-- TODO 최종 적용 버튼 -->
     <Button
         android:id="@+id/btnBrandCheck"
         android:layout_width="304dp"
