--- a/app/src/main/res/layout/activity_rental_list_filter_type.xml
+++ b/app/src/main/res/layout/activity_rental_list_filter_type.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/filled_red" />
 
+    <!-- TODO 초기화 버튼 -->
     <Button
         android:id="@+id/btntypeClear"
         android:layout_width="65dp"
@@ -44,6 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TODO Brand 아이템1 -->
     <CheckBox
         android:id="@+id/rb0"
         android:layout_width="wrap_content"
@@ -56,7 +58,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <!-- TODO Brand 아이템2 -->
     <CheckBox
         android:id="@+id/rb1"
         android:layout_width="wrap_content"
@@ -69,6 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TODO Brand 아이템3 -->
     <CheckBox
         android:id="@+id/rb2"
         android:layout_width="wrap_content"
@@ -82,6 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb0"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO Brand 아이템4 -->
     <CheckBox
         android:id="@+id/rb3"
         android:layout_width="wrap_content"
@@ -95,6 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb1"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO Brand 아이템5 -->
     <CheckBox
         android:id="@+id/rb4"
         android:layout_width="wrap_content"
@@ -108,7 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb2"
         tools:ignore="MissingConstraints" />
 
-
+    <!-- TODO Brand 아이템6 -->
     <CheckBox
         android:id="@+id/rb5"
         android:layout_width="wrap_content"
@@ -122,6 +127,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb3"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO Brand 아이템7 -->
     <CheckBox
         android:id="@+id/rb6"
         android:layout_width="wrap_content"
@@ -135,6 +141,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb4"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO Brand 아이템8 -->
     <CheckBox
         android:id="@+id/rb7"
         android:layout_width="wrap_content"
@@ -148,6 +155,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb5"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO Brand 아이템9 -->
     <CheckBox
         android:id="@+id/rb8"
         android:layout_width="wrap_content"
@@ -161,6 +169,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb6"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO Brand 아이템10 -->
     <CheckBox
         android:id="@+id/rb9"
         android:layout_width="wrap_content"
@@ -174,6 +183,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rb7"
         tools:ignore="MissingConstraints" />
 
+    <!-- TODO 최종 적용 버튼 -->
     <Button
         android:id="@+id/btnTypeCheck"
         android:layout_width="304dp"
