--- a/app/src/main/res/layout/sy_custom_dialog.xml
+++ b/app/src/main/res/layout/sy_custom_dialog.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/sy_dialog_radius">
 
+    <!-- TODO Rental List Sort 호출 Custom Dialog -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
