- 홈 : 포인트 내역에서 아래 네개(사용자명, 이용서비스 …) 제목과 내용 가운데 정렬 맞추기, 이용서비스 내용 간략하게 변경   - 차량관리 : 차량 관리에서 차량리스트 화면 제플린처럼 수정 요망 (제플린 > 스팀세차 예약 > car_register6).   - 차량관리 : 차량 등록에서 쉐도우 값 수정.

--- a/app/src/main/res/layout/activity_car_manage.xml
+++ b/app/src/main/res/layout/activity_car_manage.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:id="@+id/car_manage_include"
+        android:background="@color/base_background_color"
         tools:ignore="MissingConstraints">
 
         <!-- ActionBar : Back / Title / Info -->
@@ -73,6 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="80dp"
+        android:background="@color/base_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
