--- a/app/src/main/res/layout/activity_rental_list_filter_brand.xml
+++ b/app/src/main/res/layout/activity_rental_list_filter_brand.xml
@@ -16,7 +16,7 @@
         android:background="@color/base_background_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/filled_red" />
+        app:srcCompat="@drawable/prev_image_selector" />
 
     <!-- TODO 초기화 버튼 -->
     <Button
