--- a/app/src/main/res/layout/activity_rental_payment.xml
+++ b/app/src/main/res/layout/activity_rental_payment.xml
@@ -30,7 +30,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:contentDescription="@string/actionbar_prev_icon_description"
-                android:src="@drawable/back_black" />
+                android:src="@drawable/prev_image_selector" />
         </LinearLayout>
 
         <TextView
