--- a/app/src/main/res/layout/activity_maps_rentcar_time.xml
+++ b/app/src/main/res/layout/activity_maps_rentcar_time.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="72dp"
         android:scrollbarSize="18dp"
+        tools:viewBindingIgnore="true"
         app:fadingEdgeEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
