렌터카 리스트 액티비티에서 렌터카 리스트 디테일액티비티로 선택된 아이템의 데이터를 넘기는 메소드 적용

--- a/app/src/main/res/layout/activity_rental_list.xml
+++ b/app/src/main/res/layout/activity_rental_list.xml
@@ -92,7 +92,7 @@
     </LinearLayout>
 
     <!-- TODO 스크롤뷰에 리스트 적용 -->
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scr_rent_List"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -738,6 +738,6 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
