--- a/app/src/main/res/layout/activity_use_detail.xml
+++ b/app/src/main/res/layout/activity_use_detail.xml
@@ -126,7 +126,6 @@
 
         <!-- 기본 세차 -->
         <LinearLayout
-            android:id="@+id/notice_linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="16.5dp"
@@ -141,6 +140,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/use_detail_title_1"
                     android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
@@ -188,6 +188,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/use_detail_title_2"
                     android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
@@ -235,6 +236,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/use_detail_title_3"
                     android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
@@ -328,7 +330,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="182dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:layout_marginTop="1dp"
             android:gravity="center_vertical"
@@ -337,6 +339,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
+                android:layout_marginTop="40.5dp"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
@@ -394,6 +397,7 @@
 
             <!-- 세차장소 -->
             <LinearLayout
+                android:id="@+id/use_column12"
                 android:layout_width="wrap_content"
                 android:layout_height="18dp"
                 android:layout_marginTop="12dp"
@@ -559,7 +563,92 @@
                         android:textColor="#3e3e3e"
                         android:textSize="14sp" />
                 </LinearLayout>
+             </LinearLayout>
 
+            <!-- 배차 위치 -->
+            <LinearLayout
+                android:id="@+id/use_column10"
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:layout_marginTop="12dp"
+                android:gravity="left|center_horizontal|center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="left|center_horizontal|center_vertical">
+
+                    <TextView
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:layout_width="56dp"
+                        android:layout_height="18dp"
+                        android:gravity="left|center_horizontal|center_vertical"
+                        android:text="배차위치"
+                        android:textColor="#993e3e3e"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="left|center_horizontal|center_vertical">
+
+                    <TextView
+                        android:id="@+id/car_allocate"
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:layout_width="match_parent"
+                        android:layout_height="18dp"
+                        android:gravity="left|center_horizontal|center_vertical"
+                        android:text="송파구 석촌호수로 274"
+                        android:textColor="#3e3e3e"
+                        android:textSize="14sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- 반납 위치 -->
+            <LinearLayout
+                android:id="@+id/use_column11"
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:layout_marginTop="12dp"
+                android:gravity="left|center_horizontal|center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="left|center_horizontal|center_vertical">
+
+                    <TextView
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:layout_width="56dp"
+                        android:layout_height="18dp"
+                        android:gravity="left|center_horizontal|center_vertical"
+                        android:text="배차위치"
+                        android:textColor="#993e3e3e"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="left|center_horizontal|center_vertical">
+
+                    <TextView
+                        android:id="@+id/car_return"
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:layout_width="match_parent"
+                        android:layout_height="18dp"
+                        android:gravity="left|center_horizontal|center_vertical"
+                        android:text="관악구 남부순환로 262길 20-39"
+                        android:textColor="#3e3e3e"
+                        android:textSize="14sp" />
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
