--- a/app/src/main/res/layout/rental_list_detail.xml
+++ b/app/src/main/res/layout/rental_list_detail.xml
@@ -1053,7 +1053,7 @@
                                 android:layout_marginEnd="24dp"
                                 android:orientation="horizontal">
                                 <CheckBox
-                                    android:id="@+id/delete_checkbox"
+                                    android:id="@+id/delete2_checkbox"
                                     android:layout_height="24dp"
                                     android:layout_width="24dp"
                                     android:layout_span="2"
