--- a/app/src/main/res/layout/activity_rental_list.xml
+++ b/app/src/main/res/layout/activity_rental_list.xml
@@ -62,6 +62,66 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- TODO 스크롤뷰에 리스트 적용 -->
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp">
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scr_rent_List"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="56dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rental_list_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </androidx.core.widget.NestedScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <!--TODO : 리스트가 없을시 디스플레이 되는 레이아웃-->
+    <LinearLayout
+        android:id="@+id/rental_list_empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="386dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical|center_horizontal"
+            android:src="@drawable/empty_use" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="43dp"
+            android:fontFamily="@font/nanumsquareregular"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:text="조건에 맞는 차가 없습니다."
+            android:textColor="#993e3e3e"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+
+    <!-- TODO 스크롤뷰에 리스트 적용 -->
 <!--    <ScrollView-->
 <!--        android:id="@+id/scr_rent_List"-->
 <!--        android:layout_width="match_parent"-->
@@ -720,57 +780,5 @@
 <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 <!--    </ScrollView>-->
-
-    <!-- 20-06-23 보류 -->
-    <!-- TODO 스크롤뷰에 리스트 적용 -->
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scr_rent_List"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rental_list_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </androidx.core.widget.NestedScrollView>
-
-    <!--TODO : 리스트가 없을시 디스플레이 되는 레이아웃-->
-    <LinearLayout
-        android:id="@+id/rental_list_empty"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:layout_marginBottom="386dp"
-        android:orientation="vertical"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_vertical|center_horizontal"
-            android:src="@drawable/empty_use" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="43dp"
-            android:fontFamily="@font/nanumsquareregular"
-            android:gravity="center|center_horizontal|center_vertical"
-            android:text="조건에 맞는 차가 없습니다."
-            android:textColor="#993e3e3e"
-            android:textSize="16sp" />
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
